feat: add per-device file action permissions
